# ECR_TrackingCSRTYolo

./: CMakeLists.txt  compile_commands.json
inc/config/: Config.hpp
inc/detection/: YoloV5Detector.hpp
inc/pipeline/: TrackingPipeline.hpp
models/yolov5n/: labels.txt
src/: OnnxSsdDetector.cpp  TrackingPipeline.cpp  YoloV5Detector.cpp  main.cpp  otb_evaluator.cpp
